Add another lambda for querying a vendor by a category.  This is a little bit awkward because apparantly FilterExpressions are only available for scans.. so query by partition key, then manually filter.
